2009-12-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console-io.c: Let bf537Stamp_BSP_poll_char return int.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/bf537Stamp.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/bf537Stamp.cfg: New (relocated from /make/custom).

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

 2009-08-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h: Eliminate BSPs defining NUMBER_OF_TERMIOS_PORTS.
	Should be automatically handled by confdefs.h or the application.

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2009-05-25	Allan Hessenflow <allanh@kallisti.com>

	* start/start.S: Correct call to boot_card to meet bfin abi by
	clearing l0 - l3 and allocating some stack space.

2009-05-25	Allan Hessenflow <allanh@kallisti.com>

	PR 1418/bsps
	* startup/bspstart.c, startup/linkcmds: Enable caches and therefore
	enable the mmu.
	* start/start.S: Correct call to boot_card to meet bfin abi by
	clearing l0 - l3 and allocating some stack space.

2009-04-28	Chris Johns <chrisj@rtems.org>

	* start/start.S: Update for boot_card command line change.

2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_specs: Move -e start from *link to *startfile to avoid warning
	for undefined entry symbol when linking relocatables with binutils
	2.19.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate *_SOURCES.
